= 4.6.1 - 21.09.2022 =
Fixed: User reports user fetching and displaying was broken ( [#1040](https://github.com/WPChill/download-monitor/issues/1040) ).

= 4.6.0 - 20.09.2022 =
Fixed: Flush permalinks on install/update to prevent 404s ( [#1036](https://github.com/WPChill/download-monitor/issues/1036) )
Changed: Don't display DLM Uploads in Media Library ( [#1014](https://github.com/WPChill/download-monitor/issues/1014) )
Changed: Downloading a file is now beeing handled by XHR ( [#1013](https://github.com/WPChill/download-monitor/issues/1013), [#832](https://github.com/WPChill/download-monitor/issues/832), [#781](https://github.com/WPChill/download-monitor/issues/781) )
Fixed: Stop creating image sub-sizes for images uploaded to DLM ( [#1012](https://github.com/WPChill/download-monitor/issues/1012) )
Fixed: Order complete download button templates missing attributes ( [#1010](https://github.com/WPChill/download-monitor/issues/1010) )
Changed: Change checking from IP to new column added UUID ( [#987](https://github.com/WPChill/download-monitor/issues/987) )
Changed: Beautify Download Monitor's settings and UI ( [#971](https://github.com/WPChill/download-monitor/issues/971) )
Changed: Reports page and functionalities ( [#968](https://github.com/WPChill/download-monitor/issues/968) )
Changed: Update datepicker library ( [#736](https://github.com/WPChill/download-monitor/issues/736) )
Fixed: Double escaping on form attributes ( [#1032](https://github.com/WPChill/download-monitor/issues/1032) )
Fixed: open_basedir warnings & errors for trying to open relative path ( [#981](https://github.com/WPChill/download-monitor/issues/981), [#890](https://github.com/WPChill/download-monitor/issues/890) )

= 4.5.99 - 12.09.2022 =
Fixed: Restricted schemes ( [#1035](https://github.com/WPChill/download-monitor/issues/1035) )

= 4.5.98 - 08.09.2022 =
Fixed: Un-approved file download bug/security issue ( [#1021](https://github.com/WPChill/download-monitor/issues/1021) )
